
2019-09-26  Ron Norman <rjn@inglenet.com>

	* libcob/sysdefines.h: New header to keep system dependent #defines
	* cob.c,cob.hi,codegen.c: Uses sysdefines.h

2019-09-26  Ron Norman <rjn@inglenet.com>

	* typeck.c: Compile time checking of reference modification
	           is now based on reference-bounds-check config option

2019-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: moved alignment defines from libcob/common.h here
	* cobc.h: moved alignment exception for hpux from libcob/common.h here
	* codeoptim.c, cobc.h: generate the actual requested code w/o the attribute
	  __unaligned instead of overriding the attribute in the header
	* tree.h: removed duplicate redefinition of atol/atoll

2019-09-22  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix logic error in output_field_display

2019-09-22  Ron Norman <rjn@inglenet.com>

	* parser.y: Fixed 'integer' to allow signed values in report
	           for example  COLUMN +2 vs COLUMN 2
		   when -std=xxxx has report-column-plus: yes
	* codegen.c,field.c: Corrections to handling of COLUMN 
	           With OCCURS COLUMN +num is no longer an alternative for STEP

2019-09-15  Ron Norman <rjn@inglenet.com>

	* cobc.h: For HPUX set COB_ALLOW_UNALIGNED as undefined
	* typeck.c: Emit ADD/SUBTRACT shortcut for COMP-5 only 
	            if COB_ALLOW_UNALIGNED defined
	* tree.h: Revert 'lock_mode' back to an 'int'
	* codegen.c, debug.c: Changes for 'lock_mode' being an 'int'
	* cobc.h: Add COB_MEM_SIZE as size of cob_mem_struct rounded up to
	          multiple of sizeof(long long)
	* cobc.c: Use COB_MEM_SIZE as size of cob_mem_struct
	          To avoid aborts on system that requires aligned data

2019-09-09  Ron Norman <rjn@inglenet.com>

	* cobc.h: Add defines for COB_ALIGN_8 to set 8 byte boundary alignment
	* codegen.c: Emit attributes and/or pragma to align 01/77 fields on
	            8 byte boundary

2019-09-04  Ron Norman <rjn@inglenet.com>

	* codegen.c: Set temp-field.data after all declarations to