@@ -9738,6 +9738,7 @@ cb_build_move_literal (cb_tree src, cb_tree dst)
 	unsigned char		*buff;
 	unsigned char		*p;
 	enum cb_category	cat;
+	struct cb_reference	*r;
 	int			i;
 	int			diff;
 	int			val;
@@ -9746,9 +9747,17 @@ cb_build_move_literal (cb_tree src, cb_tree dst)
 
 	l = CB_LITERAL (src);
 	f = CB_FIELD_PTR (dst);
+	r = CB_REFERENCE (dst);
 	cat = CB_TREE_CATEGORY (dst);
 
 	if (f->flag_any_length) {
+		return CB_BUILD_FUNCALL_2 ("cob_move", src, dst);
+	}
+
+	if ((cb_reference_bounds_check == CB_WARNING
+	  || cb_reference_bounds_check == CB_OK) 
+	 && (r->offset != NULL
+	  || r->length != NULL)) {
 		return CB_BUILD_FUNCALL_2 ("cob_move", src, dst);
 	}
 
