@@ -18423,75 +18423,3 @@ AT_CHECK([./prog], [0], [32767 vs 32767
 
 AT_CLEANUP
 
-AT_SETUP([Test Reference Modification])
-AT_KEYWORDS([Numeric])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION DIVISION.
-       PROGRAM-ID. prog.
-       DATA  DIVISION.
-       WORKING-STORAGE SECTION.
-       01  TSTLEN PIC 99 VALUE 10.
-       01  TSTBIN PIC 99 COMP VALUE 10.
-       01  TSTBIN10 PIC 9(9) COMP VALUE 825373492.
-       01  TSTX4    PIC X(4).
-       01  TSTREC.
-         05  TSTTAIL2  PIC X.
-         05  TSTTAIL3  PIC X.
-         05  FILLER    PIC X(8).
-         05  TSTEND    PIC X.
-       01  TSTREC2 PIC X(20).
-       01  TSTXX   PIC X(2).
-       PROCEDURE DIVISION.
-           MOVE "  " TO TSTTAIL2 (1:2).
-           MOVE SPACES TO TSTTAIL3 (2:8).
-           MOVE "  " TO TSTTAIL3 (1:15).
-           MOVE ALL "*" TO TSTREC (1:TSTLEN).
-           MOVE '$' TO TSTEND.
-           DISPLAY "TSTREC is " TSTREC.
-           MOVE ALL "+" TO TSTTAIL3 (1:TSTLEN).
-           MOVE '$' TO TSTEND.
-           DISPLAY "TSTREC is " TSTREC.
-           MOVE 11 to TSTLEN.
-           MOVE SPACES TO TSTTAIL2 (1:TSTLEN).
-           MOVE '$' TO TSTEND.
-           DISPLAY "TSTREC is " TSTREC.
-           MOVE '12' TO TSTXX.
-           MOVE TSTXX TO TSTLEN.
-           DISPLAY "TSTLEN is " TSTLEN.
-           MOVE ' 3' TO TSTXX.
-           MOVE TSTXX TO TSTLEN.
-           DISPLAY "TSTLEN is " TSTLEN.
-           MOVE '  ' TO TSTXX.
-           MOVE TSTXX TO TSTLEN.
-           DISPLAY "TSTLEN is " TSTLEN.
-           MOVE 75 TO TSTLEN.
-           MOVE TSTLEN TO TSTXX.
-           DISPLAY "TSTXX is " TSTXX " vs " TSTLEN.
-           MOVE ' 3' TO TSTXX.
-           MOVE TSTXX TO TSTBIN.
-           DISPLAY "TSTBIN is " TSTBIN.
-           ADD 1 to TSTBIN.
-           MOVE TSTBIN TO TSTXX.
-           DISPLAY "TSTXX is " TSTXX " vs " TSTBIN.
-           MOVE TSTBIN10 (1:4) TO TSTX4 (1:4).
-           DISPLAY "TSTBIN10 is " TSTBIN10 " vs '" TSTX4 "'".
-           STOP RUN.
-])
-
-AT_CHECK([cobc -x -std=mf -debug -Wall prog.cob ], [0], [], [])
-
-AT_CHECK([./prog], [0], [TSTREC is **********$
-TSTREC is *+++++++++$
-TSTREC is           $
-TSTLEN is 12
-TSTLEN is 03
-TSTLEN is 00
-TSTXX is 75 vs 75
-TSTBIN is 03
-TSTXX is 04 vs 04
-TSTBIN10 is 825373492 vs '1234'
-], [])
-
-AT_CLEANUP
-
